@@ -489,14 +489,12 @@
   -->
   <requestHandler name="standard" class="solr.SearchHandler">
     <!-- default values for query parameters -->
-     <lst name="defaults">
-       <str name="echoParams">explicit</str>
-       <!--
-       <int name="rows">10</int>
-       <str name="fl">*</str>
-       <str name="version">2.1</str>
-        -->
-     </lst>
+    <lst name="defaults">
+      <str name="echoParams">none</str>
+      <str name="fl">item_id,score</str>
+      <str name="q.op">AND</str>
+      <str name="q.alt">*:*</str>
+    </lst>
   </requestHandler>
 
 <!-- Please refer to http://wiki.apache.org/solr/SolrReplication for details on configuring replication -->
@@ -524,7 +522,7 @@
   <requestHandler name="dismax" class="solr.SearchHandler" default="true">
     <lst name="defaults">
      <str name="defType">dismax</str>
-     <str name="echoParams">explicit</str>
+     <str name="echoParams">none</str>
      <float name="tie">0.01</float>
  <!--<str name="qf">
         text^0.5 features^1.0 name^1.2 sku^1.5 id^10.0 manu^1.1 cat^1.4
