@@ -1,5 +1,7 @@
 Search API Solr search 1.0, dev (xx/xx/xxxx):
 ---------------------------------------------
+- #1138230 by becw, drunken monkey: Added increased flexibility to the service
+  class.
 - #1127038 by drunken monkey: Fixed handling of date facets.
 - #1110820 by becw, drunken monkey: Added support for the Luke request handler.
 - #1095956 by drunken monkey: Added Solr-specific index alter hook.
